welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:7: error: value nums is not a case class, nor does it have an unapply/unapplySeq member
        case (nums(i), nums(i), nums(i)) => return false
              ^noTriples:7: error: value nums is not a case class, nor does it have an unapply/unapplySeq member
        case (nums(i), nums(i), nums(i)) => return false
                       ^noTriples:7: error: i is already defined as value i
        case (nums(i), nums(i), nums(i)) => return false
                            ^noTriples:7: error: value nums is not a case class, nor does it have an unapply/unapplySeq member
        case (nums(i), nums(i), nums(i)) => return false
                                ^noTriples:7: error: i is already defined as value i
        case (nums(i), nums(i), nums(i)) => return false
                                     ^